--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lint": "eslint src/**.js --max-warnings=0",
     "watch": "npm run build && npm link && nodemon",
     "build": "rimraf ./dist && tsc",
-    "prepublishOnly": "npm run lint && npm run build"
+    "prepublishOnly": "npm run lint && npm run build",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "aws-api-gateway-client": ">=0.3.7"
