--- a/package.json
+++ b/package.json
@@ -1,25 +1,50 @@
 {
 
   "displayName": "BlueConnect",
+
   "name": "homebridge-blueconnect",
+
   "version": "0.1.1",
+
   "description": "Add your BlueRiiot smart pool device to homebridge",
+
   "license": "the most strict license",
+
   "keywords": [
+
     "homebridge-plugin"
+
   ],
+
   "engines": {
+
     "node": ">=10.17.0",
+
     "homebridge": ">=0.4.8"
+
   },
+
   "scripts": {
+
     "lint": "eslint src/**.js --max-warnings=0",
+
     "watch": "npm run build && npm link && nodemon",
+
     "build": "rimraf ./dist && tsc",
+
     "prepublishOnly": "npm run lint && npm run build",
+
     "test": "mocha"
+
   },
+
   "dependencies": {
-    "aws-api-gateway-client": ">=0.3.7"
+
+    "aws-api-gateway-client": ">=0.3.7",
+
+    "mocha": "^9.1.0"
+
   }
+
 }
+
