--- a/package.json
+++ b/package.json
@@ -1,49 +1,39 @@
 {
-
   "displayName": "BlueConnect",
   "name": "homebridge-blueconnect",
   "version": "0.1.1",
   "description": "Add your BlueRiiot smart pool device to homebridge",
-  "license": "the most strict license",
+  "license": "UNLICENSED",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/VanAxl/homebridge-blueconnect.git"
   },
   "keywords": [
-
     "homebridge-plugin"
-
   ],
-
   "engines": {
-
     "node": ">=10.17.0",
-
     "homebridge": ">=0.4.8"
-
   },
-
   "scripts": {
-
-    "lint": "eslint src/**.js --max-warnings=0",
-
+    "lint": "eslint **.js --max-warnings=0",
     "watch": "npm run build && npm link && nodemon",
-
     "build": "rimraf ./dist && tsc",
-
     "prepublishOnly": "npm run lint && npm run build",
-
     "test": "mocha"
-
   },
-
   "dependencies": {
-
     "aws-api-gateway-client": ">=0.3.7",
-
+    "eslint": "^8.19.0",
     "mocha": "^9.1.0"
-
-  }
-
+  },
+  "bugs": {
+    "url": "https://github.com/VanAxl/homebridge-blueconnect/issues"
+  },
+  "homepage": "https://github.com/VanAxl/homebridge-blueconnect#readme",
+  "main": "index.js",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.30.5"
+  },
+  "author": "VanAxl"
 }
-
