--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
   },
   "dependencies": {
     "aws-api-gateway-client": ">=0.3.7",
-    "eslint": "^8.19.0",
-    "mocha": "^9.1.0"
+    "eslint": "^8.19.0"
   },
   "bugs": {
     "url": "https://github.com/VanAxl/homebridge-blueconnect/issues"
